# ChangeLog for app-text/asciidoc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.72 2012/03/19 01:28:00 sping Exp $

*asciidoc-8.6.7 (19 Mar 2012)

  19 Mar 2012; Sebastian Pipping <sping@gentoo.org> +asciidoc-8.6.7.ebuild,
  asciidoc-9999.ebuild:
  Bump to 8.6.7, allow pygments for USE=highlight (bug #383291)

  30 Jun 2011; Sebastian Pipping <sping@gentoo.org> asciidoc-8.5.3.ebuild,
  asciidoc-8.6.3.ebuild, asciidoc-8.6.4.ebuild, asciidoc-8.6.5.ebuild,
  asciidoc-9999.ebuild:
  Add "graphviz? ( media-gfx/graphviz )" to runtime dependencies (bug #361255)

  27 Jun 2011; Sebastian Pipping <sping@gentoo.org> asciidoc-8.5.3.ebuild,
  asciidoc-8.6.3.ebuild, asciidoc-8.6.4.ebuild, asciidoc-8.6.5.ebuild,
  asciidoc-9999.ebuild:
  Remove runtime dependency on graphviz (bug #361255)

*asciidoc-8.6.5 (22 May 2011)

  22 May 2011; Sebastian Pipping <sping@gentoo.org> +asciidoc-8.6.5.ebuild:
  Bump to 8.6.5, looks trivial

  05 Apr 2011; Ulrich Mueller <ulm@gentoo.org> asciidoc-8.2.6.ebuild:
  Depend on dev-lang/python because virtual/python will go away, bug 358849.

  23 Feb 2011; Sebastian Pipping <sping@gentoo.org> asciidoc-8.6.4.ebuild,
  metadata.xml:
  Bring back ~hppa keyword (bug #356069), add use flag "highlight" (bug
  #344289)

  22 Feb 2011; Jeroen Roovers <jer@gentoo.org> asciidoc-8.6.4.ebuild:
  Drop HPPA because of missing dep on media-sound/lilypond (bug #356069).

*asciidoc-8.6.4 (22 Feb 2011)

  22 Feb 2011; Sebastian Pipping <sping@gentoo.org> +asciidoc-8.6.4.ebuild,
  asciidoc-9999.ebuild:
  Bump to 8.6.4, integrate test suite, sync live ebuild

*asciidoc-9999 (14 Nov 2010)
*asciidoc-8.6.3 (14 Nov 2010)

  14 Nov 2010; Sebastian Pipping <sping@gentoo.org> +asciidoc-8.6.3.ebuild,
  +asciidoc-9999.ebuild:
  Bump to 8.6.3 (bug #339068), migrate to a hybrid release/live ebuild.
  Upstream is not shipping HTML docs anymore: for now we don't build them
  downstream.
