@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST asciidoc-8.2.6.tar.gz 739790 RMD160 c07d2eaa04d16275c44756236023c0789cf54310 SHA1 cce98ed670c462a3a007b03b6f92d2108c5bc405 SHA256 5e9c966cfcb9d08487da625b41ed5e007eedb2d1abbb996dd6f78f2c5bde08dc
 DIST asciidoc-8.5.3.tar.gz 1254979 RMD160 c34aa2be7bc30f8ac0dbbd162f9feecbb345cf98 SHA1 78fd756e17c9b83abfeb43806dff95db10bff8bc SHA256 9e9f69dd10b5975436d48d87c202082a128329696191ea8dbc6d2f7722fd41b5
@@ -11,15 +11,15 @@ EBUILD asciidoc-8.2.6.ebuild 1635 RMD160 9ad0772cdf9da228274016fdc220b78df6b7eef
 EBUILD asciidoc-8.5.3.ebuild 2002 RMD160 295535440e1ac72b760e9ecef22fc2094ad1041e SHA1 10a01c900d686d242a08b6f1c27f5404869347b5 SHA256 4c62d77f4a1a2b3f7c6d232c78c1ce61f355e15107853c49b5dfb2052d09c2b5
 EBUILD asciidoc-8.6.3.ebuild 2377 RMD160 ee89698e9c89f0ff61d836a4537e7a3bb00d2321 SHA1 473d39a4a62e63ea953c4ae9b9c269dfe3f3dd2e SHA256 5dee0492399fbddef2f19a5bf4c1cc9e904e4739cab272f6b5fc7d00d6d65c49
 EBUILD asciidoc-8.6.4.ebuild 2754 RMD160 8e704ed3a65184e8171ade045ec781b19461e07c SHA1 0b4512cfd0e3bcfa873b37dba478118909489615 SHA256 b5f321b27afb5ac1003a71c3fca8f6735b1c2dd222481b16acffc429fc77130d
-EBUILD asciidoc-8.6.5.ebuild 2754 RMD160 dae618161e9e423a6527bca34062c23ea023fc21 SHA1 9674147b8c71fdad7c196cbf1d6aee35ff9a1773 SHA256 090a1377821e91a2dba41321f22f6a53f80c7817ee22609d9dc3900f0c449d0f
-EBUILD asciidoc-8.6.7.ebuild 2781 RMD160 9751fe74518194464bb731e12bd2d4a033e1e888 SHA1 f929d5f38e811be9d1d109eeb727daef2dd6d9f9 SHA256 d0193522aec2708f6f1d23d8a20b5f909cef00390426d5fe59908c6b85054de0
-EBUILD asciidoc-9999.ebuild 2780 RMD160 ea5c62fa36f8a6b780d2e5017b2f753f3b6a28bf SHA1 d398d5676bc469701c8dbf68ad81ba03a9cd4a0d SHA256 33cbdfcce3818f1a72667cc61212d2f3a6120809e59af69f8b82e207edb98acd
-MISC ChangeLog 10554 RMD160 3facfddb2c5dbfeaa7ab8ca31a683cf39c964676 SHA1 414e985b881202ad81132b0e10c79464b2437ac5 SHA256 d32c8e46b9e296daa15661ba19391b39ad082d59c8166dfd9ccad5ee07704da1
+EBUILD asciidoc-8.6.5.ebuild 2763 RMD160 c4442553ac53343594a543efe1d8cc2896108ac1 SHA1 fa702e27ead82a0c577d6a77cb6282c80a3e7b14 SHA256 c302563388bb120dfd50d39767e4c139a6103a02d1be65f4136144c4a05fe2a2
+EBUILD asciidoc-8.6.7.ebuild 2790 RMD160 5297e8caf4819d6db6b7e00b8a5e7d6df3d97512 SHA1 243f33740400ced7c83ad15c2d67392ae32bde2a SHA256 8f79a71f2f3c5e20f81ca023ece37b463d549a4f2fb203806911ad3797fa61ab
+EBUILD asciidoc-9999.ebuild 2789 RMD160 e7a410bd9522fa711c9e869d73c8d4b8c564653f SHA1 bb6b0c440bdb6316ff0714117dae7e314cf1eaa4 SHA256 42bf704067158dfc9c3207927f9138e0f13e952e1b7cccae591fa5cd887c8428
+MISC ChangeLog 10737 RMD160 6cabe5ea322550da9286df1efa95dfa42c16a541 SHA1 fe2b9c1cf781354d7752f1838735f0c3b11baef1 SHA256 c96ff658d51f459644e8ff62c27940e1c2f096dc7849b43e2da364d2292a101f
 MISC metadata.xml 242 RMD160 c28ffe95bbcd5f3a3330d543ed106880a136ffbc SHA1 9d5083a77daad3bcf42191537777a849153b2d2e SHA256 32153166cf423cfa9e1baa2b469d8da28fae8d661492feaabefc4ca667e94908
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk9mi4QACgkQsAvGakAaFgCUiQCgpNJdzYRehTOGuLR570eqM92C
-/lYAn1pGmkwNc/Vs00lBhuVnAlxKxtbE
-=dxs6
+iF4EAREIAAYFAk9sh6AACgkQC77qH+pIQ6SQjAEAr2ovfwvbGhCjVajysPTIg6wv
+91diUbsly+nloVOePGsBAMtkhdh/bYhVVi7xTlIfV44UDnrhDLR8lRGrrA7X0jX3
+=GCBr
 -----END PGP SIGNATURE-----
