@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX texmf-update2010 5163 RMD160 dd0f3b68f90d13ad37efceb9a629b841c2435a5d SHA1 328a7c2ef68b5775bb09ea62d864173658eea427 SHA256 b19566f0c8032a7f24ee0ead26d627e306ee360aa8a5948a1256bc2760f89856
 DIST texlive-20100722-source.tar.xz 33482988 RMD160 1859d5886c846763068120cb9005d09c12b59b09 SHA1 c5573c0617f1a44235212277959f48fb76590542 SHA256 d813d1482bb82e02e5c740601f4a9fc44411513ca421897a97d5f68aa2212417
@@ -185,13 +185,13 @@ DIST texlive-module-web.doc-2010.tar.xz 11512 RMD160 5fc052b2e1510cef2b202faca6f
 DIST texlive-module-web.doc-2011.tar.xz 11512 RMD160 136c08612ade2d4f5dd70262fa76895987520b1d SHA1 b56e98ba3615b84ce570cf818ea6aa4ca634387a SHA256 a7af7fa3555a2f3e5461d5379d933b41cf83b25454ab202837c90fa64b8a3bb0
 EBUILD texlive-core-2010-r4.ebuild 10062 RMD160 b0b998a218e855208e43e23267082b3f67d091aa SHA1 1b977dbf11da796c19aaba82b6ef33f20adee02a SHA256 4407c49a1c905f649bfab820bd80c6a73c8594b3e2375c9d2b5b5a29f40e8b5c
 EBUILD texlive-core-2011-r5.ebuild 10563 RMD160 c98e9de2eb3667ca4d0ffe7b7771e059a400bd84 SHA1 df56a45118016c1f45deb573181bbdc31ad3eeb4 SHA256 7232d5f94d5da677323cde35b7e1dc956b6496acbc12b6b4b8648d2c56b0c996
-EBUILD texlive-core-2011-r6.ebuild 10565 RMD160 aad7abcc98ca37f6c9597b6cb35bc85c71b41d1b SHA1 56df4d76d4a54baa9be4ef9c4472e02ede9003eb SHA256 acecf881345c210e37dd61fb5dc7657da43e75f7e2eaa6618260117e2d9696e4
-MISC ChangeLog 27846 RMD160 adeb1eb8aca94a49bda577e7709dd9cc6a3424de SHA1 bd25ed698bf67e91615ecd67f64d33e205c3a787 SHA256 fdf7b54ce283d3dd719b805a1b9e549a957b973b95ff96784844453bfdf4c215
+EBUILD texlive-core-2011-r6.ebuild 10562 RMD160 8badbba34005a4cae36b3033b83de0496dccce60 SHA1 535b95eba89242c1cd353fd8cf6a01ea48331b11 SHA256 2e256548cc11c906504aeb12506713afb0647307540600ae3aeac938a290864c
+MISC ChangeLog 27954 RMD160 1b3a03b2056c4877e80180abc80823e5cf96b210 SHA1 1f85059b8548c0201f5609957fdc9c55d8b7b8cc SHA256 11eaa3b66c3e04f040e4f7945dc91ef90a67fc3fdcdc84a61a160365f9e5b7ae
 MISC metadata.xml 448 RMD160 c56e123fc21192bc5cbdba7eb6a3838f251c8342 SHA1 afac1f79f72c02806e1294282d7745b4d89deac6 SHA256 ddaca86e81c2eaf01ff5e7d613777a6c2231ed0f09646cb303e23b0e90c08d02
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk9p//kACgkQodBTJSDyo65nIAD+LIhlvtgWczlBBYg/asoJmBbR
-vXErSHPWpV606tTfdYsA/AyKhd5iazyIpr9Wun105GUUt3MBFqV1pMdjaXo/Rp8I
-=jcMR
+iEYEARECAAYFAk9siGYACgkQVWmRsqeSphOlYgCdGKK04T87bIqeoUB2ejReVJEx
+rGUAn29UhGFga2K3kpi7Ng+A8YqcPn+3
+=O7ID
 -----END PGP SIGNATURE-----
