@@ -1,6 +1,10 @@
 # ChangeLog for app-text/asciidoc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.72 2012/03/19 01:28:00 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.73 2012/03/23 14:24:25 floppym Exp $
+
+  23 Mar 2012; Mike Gilbert <floppym@gentoo.org> asciidoc-8.6.5.ebuild,
+  asciidoc-8.6.7.ebuild, asciidoc-9999.ebuild:
+  sed || die. Reported by Maurizio Camisaschi in bug 388225.
 
 *asciidoc-8.6.7 (19 Mar 2012)
 
